# otus-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  inference.py  train.py  work.ipynb
tests/: test_case.json
