[project]
name = "otus-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "black==26.3.1",
    "fastapi==0.135.1",
    "httpx==0.28.1",
    "ipykernel==7.2.0",
    "isort==8.0.1",
    "loguru==0.7.3",
    "pandas==3.0.1",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "uvicorn==0.42.0",
]
